<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layout_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.VideoDetailsActivity">


        <VideoView
                android:id="@+id/details_video"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_avaliacao"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/details_btnDislike"
                    android:text="@string/dislike"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/details_btnLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
            />
            <Button
                    android:id="@+id/details_btnLike"
                    android:text="@string/like"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
                app:layout_constraintTop_toBottomOf="@id/container_avaliacao"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:divider="@drawable/divider8dp"
                android:showDividers="middle"
                android:padding="8dp"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/txt_informacoes"
                    android:text="@string/informacoes"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_video"
            />

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/title"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:layout_width="90dp"
                />
                <TextView
                        android:id="@+id/details_title"
                        android:text="@string/lorem_ipsum"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                />
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/likes"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:layout_width="90dp"
                />
                <TextView
                        android:id="@+id/details_likes"
                        android:text="@string/lorem_ipsum"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                />
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/dislikes"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:layout_width="90dp"
                />
                <TextView
                        android:id="@+id/details_dislikes"
                        android:text="@string/lorem_ipsum"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                />
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/source"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:layout_width="90dp"
                />

                <TextView
                        android:id="@+id/details_source"
                        android:text="@string/lorem_ipsum"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                />
            </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/speaker"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="90dp"
            />
            <TextView
                    android:id="@+id/details_speaker"
                    android:text="@string/lorem_ipsum"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
            />
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/duration"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="90dp"
            />
            <TextView
                    android:id="@+id/details_duration"
                    android:text="@string/lorem_ipsum"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
            />
        </LinearLayout>


        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/views"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="90dp"
            />
            <TextView
                    android:id="@+id/details_views"
                    android:text="@string/lorem_ipsum"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
            />

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/recorded"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="90dp"
            />
            <TextView
                    android:id="@+id/details_recorded"
                    android:text="@string/lorem_ipsum"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
            />

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/event"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="90dp"
            />
            <TextView
                    android:id="@+id/details_event"
                    android:text="@string/lorem_ipsum"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
            />

        </LinearLayout>





       </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>